plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.5'
	id 'io.spring.dependency-management' version '1.1.3'
	id "org.asciidoctor.jvm.convert" version "3.3.2"
	//asciidoctor 파일을 컨버팅하고 Build 폴더에 복사하기 위한 플러그인
}


ext {
	set('snippetsDir', file("build/generated-snippets"))
}
group = 'kosta'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	asciidoctorExt
	compileOnly {
		extendsFrom annotationProcessor
	}
}
repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	runtimeOnly 'com.mysql:mysql-connector-j'


	// Security
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.security:spring-security-test'

	// Jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	//image 관련
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	// querydsl
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	//redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'


	// RestDocs
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
	asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
	//adoc 파일에서 사용할 snippets 속성이 자동으로 build/generated-snippets를 가키리도록 해줌

	// 채팅 관련
	// WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	// sockjs
	implementation 'org.webjars:sockjs-client:1.5.1'
	// stomp
	implementation 'org.webjars:stomp-websocket:2.3.4'

}

//restDocs
ext {
	snippetsDir = file("build/generated-snippets")
}


tasks.named('test') {
	useJUnitPlatform()
}

asciidoctor {
	dependsOn test
	configurations 'asciidoctorExt'
}

tasks.register('copyApiDocument', Copy) {
	dependsOn asciidoctor
	doFirst {
		delete file("src/main/resources/static/docs")
	}
	from asciidoctor.outputDir
	into file("src/main/resources/static/docs")
}

build {
	dependsOn copyApiDocument
}

//RestDocs 종료
task copyPrivate(type: Copy) {
	copy {
		from './MainProject-Back-Data'
		include "*.yml"
		into 'src/main/resources'
	}
}

def querydslDir = "$buildDir/generated/querydsl"

//tasks.named('test') {
//	useJUnitPlatform()
//}

sourceSets {
	main.java.srcDir querydslDir
}
configurations {
	querydsl.extendsFrom compileClasspath
}